--- a/components/guesses.module.css
+++ b/components/guesses.module.css
@@ -23,7 +23,6 @@
 .word > li {
   width: 60px;
   height: 100%;
-  height: 100%;
   border: 1px gray solid;
   color: black;
   margin: 6px;
@@ -39,9 +38,15 @@
   .word > li {
     font-size: 22px;
   }
+
+  .row {
+    position: relative;
+    margin: 0 0 4px 0;
+    height: calc(100% / 6 - 4px);
+  }
 }
 
-@media screen and (max-height: 500px) {
+@media screen and (max-height: 470px) {
   .word > li {
     font-size: 14px;
   }
