--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -10,7 +10,8 @@
   margin-bottom: 5px;
 }
 
-.resetLink,
+.newLink,
+.endLink,
 .helpLink {
   position: absolute;
   top: 5px;
@@ -19,11 +20,18 @@
   text-decoration: underline;
   color: cornflowerblue;
   cursor: pointer;
+  font-size: 16px;
 }
 
-.resetLink {
+.newLink,
+.endLink {
   left: 10px;
   right: auto;
+  color: #0a0;
+}
+
+.endLink {
+  color: #e00;
 }
 
 .message {
@@ -32,4 +40,33 @@
   padding: 5px 10px;
   border-radius: 4px;
   font-size: 18px;
+  position: relative;
+}
+
+.tooltip {
+  display: block;
+  white-space: nowrap;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translate(-50%, 120%);
+  background: #e00;
+  color: white;
+  z-index: 4;
+  padding: 3px 6px;
+  font-size: 16px;
+}
+
+.tooltip:after {
+  content: '';
+  position: absolute;
+  display: block;
+  width: 0;
+  z-index: 1;
+  border-style: solid;
+  border-color: #e00 transparent;
+  border-width: 0 6px 6px;
+  top: -6px;
+  left: 50%;
+  margin-left: -6px;
 }
