allow playing without accents

--- a/components/guesses.module.css
+++ b/components/guesses.module.css
@@ -1,9 +1,14 @@
-.wrapper {
+.wrapper,
+.wrapperSmall {
   width: 100%;
   max-width: 360px;
   margin: 0 auto;
   max-height: 421px;
-  height: calc(100% - 280px);
+  height: calc(100% - 220px);
+}
+
+.wrapperSmall {
+  height: calc(100% - 300px);
 }
 
 .row {
