--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -34,6 +34,16 @@
   color: #e00;
 }
 
+.diaLink {
+  text-align: center;
+  font-size: 12px;
+}
+
+.diaLink a {
+  color: orangered;
+  text-decoration: underline;
+}
+
 .message {
   background: black;
   color: white;
